rtsp: add option to set the socket timeout of the lower protocol.

Fixes Ticket2294

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>