libavformat/rtsp.h
@@ -391,6 +391,11 @@ typedef struct RTSPState {
     int initial_timeout;
 
     /**
+     * timeout of socket i/o operations.
+     */
+    int stimeout;
+
+    /**
      * Size of RTP packet reordering queue.
      */
     int reordering_queue_size;
